--- a/dataflow/ADF_ADLS_Snowflake_Data_Flow.json
+++ b/dataflow/ADF_ADLS_Snowflake_Data_Flow.json
@@ -10,10 +10,6 @@
 			],
 			"sinks": [
 				{
-					"dataset": {
-						"referenceName": "SnowflakeTableData",
-						"type": "DatasetReference"
-					},
 					"name": "SinkOfData"
 				}
 			],
@@ -46,19 +42,9 @@
 				"     TotalSales = sum(SALES)) ~> GroupBYYearIDMonthIDANDTotalSales",
 				"GroupBYYearIDMonthIDANDTotalSales sink(allowSchemaDrift: true,",
 				"     validateSchema: false,",
-				"     input(",
-				"          YEAR_ID as string,",
-				"          MONTH_ID as string,",
-				"          TOTAL_SALES as string",
-				"     ),",
-				"     deletable:false,",
-				"     insertable:true,",
-				"     updateable:false,",
-				"     upsertable:false,",
-				"     format: 'table',",
 				"     skipDuplicateMapInputs: true,",
 				"     skipDuplicateMapOutputs: true,",
-				"     stageInsert: true) ~> SinkOfData"
+				"     format: 'table') ~> SinkOfData"
 			]
 		}
 	}
